[package]
name = "backend"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenv = "0.15.0"
hyper = { version = "0.14", features = ["full"] }
routerify = "3"
tokio = { version = "1", features = ["full"] }
ts-rs = "7.0"
ulid = "1.1.0"
