[package]
name = "backend"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "serde_json"] }
dotenv = "0.15.0"
hyper = { version = "0.14", features = ["full"] }
routerify = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.56"
tokio = { version = "1", features = ["full"] }
ts-rs = "7.0"
ulid = "1.1.0"
